# table-view

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .prettierignore  .tool-versions  AGENTS.md  CLAUDE.md  CODE_SMELLS.md  Dockerfile.e2e  README.md  TEST_IMPROVE_PLAN.md  docker-compose.test.yml  docker-compose.yml  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  wdio.conf.ts  wdio.smoke.conf.ts
docs/: PLAN.md  (+23 more)
src-tauri/: Cargo.toml  clippy.toml  deny.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.config/: nextest.toml
src-tauri/AppIcon.icon/: icon.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/Compiled/: AppIcon.icns  Assets.car
src-tauri/migrations/: 0001_initial.sql  0002_connection_read_only.sql  0003_connection_trust_server_certificate.sql  0004_table_activity.sql  0005_snippets.sql
src-tauri/mongosh-parser-core/: Cargo.toml
src-tauri/mongosh-parser-core/src/: ast.rs  completion.rs  lexer.rs  lib.rs  parser.rs
src-tauri/sql-parser-core/: Cargo.toml
src-tauri/sql-parser-core/src/: ast.rs  completion.rs  lexer.rs  lib.rs  oracle.rs  parser.rs  safety.rs
src-tauri/sql-parser-core/src/completion/: aliases.rs  compact.rs  completion_state_tests.rs  completion_tests.rs  context.rs  dialect_completion_tests.rs  mssql_completion_tests.rs  oracle_completion_tests.rs  token.rs  vocabulary.rs
src-tauri/sql-parser-core/src/parser/: admin.rs  ddl.rs  dml.rs  select.rs  tests.rs  util.rs
src-tauri/src/: diagnostics.rs  error.rs  events.rs  launcher.rs  lib.rs  main.rs
src-tauri/src/commands/: cancel_query.rs  connection.rs  datagrid_prefs.rs  export.rs  export_tests.rs  file_analytics.rs  groups_collapsed.rs  guard.rs  history.rs  import_csv.rs  import_file.rs  import_legacy.rs  keyring.rs  kv.rs  meta.rs  meta_sentinel.rs  mod.rs  open_log_dir.rs  open_workspace_window.rs  persist_connections.rs  persist_favorites.rs  persist_mru.rs  persist_settings.rs  persist_snippets.rs  persist_table_activity.rs  persist_workspace.rs  query.rs  registry.rs  release_tab_connection.rs  safe_mode.rs  schema.rs  search.rs  single_instance.rs  snapshot.rs  sql_parser.rs  sqlite_pool.rs  test_util.rs
src-tauri/src/commands/connection/: crud.rs  groups.rs  io.rs  session.rs  sqlite_file.rs
src-tauri/src/commands/document/: browse.rs  bulk_write_parse.rs  mod.rs  mutate.rs  query.rs
src-tauri/src/commands/export/: dump_writers.rs  grid_writers.rs  mod.rs  mssql_dump.rs  mysql_dump.rs  oracle_dump.rs  session.rs  tests.rs
src-tauri/src/commands/rdb/: ddl.rs  mod.rs  query.rs  schema.rs  value_search.rs
src-tauri/src/commands/rdb/ddl/: dispatch.rs
src-tauri/src/db/: active.rs  ddl_fragment.rs  duckdb.rs  fixtures.rs  kv_trait.rs  kv_types.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  oracle.rs  postgres.rs  raw_where.rs  raw_where_tests.rs  row_cap.rs  search.rs  search_destructive.rs  search_dsl.rs  search_executor.rs  search_http.rs  search_live_destructive.rs  search_live_query.rs  sqlite.rs  testing.rs  tests.rs  tls.rs  traits.rs  types.rs
src-tauri/src/db/adapters/: mod.rs  tests.rs
src-tauri/src/db/capabilities/: mod.rs
src-tauri/src/db/contracts/: mod.rs
src-tauri/src/db/duckdb/: batch.rs  connection.rs  file_analytics.rs  queries.rs  sql_text.rs  value.rs
src-tauri/src/db/mongodb/: category.rs  connection.rs  mutations.rs  queries.rs  schema.rs
src-tauri/src/db/mssql/: admin.rs  catalog.rs  ddl.rs  ddl_tests.rs  query.rs  runtime.rs  support.rs  tests.rs
src-tauri/src/db/mysql/: checks.rs  connection.rs  mutations.rs  queries.rs  schema.rs  version.rs
src-tauri/src/db/oracle/: admin.rs  catalog.rs  common.rs  connection_only.rs  ddl.rs  ddl_tests.rs  metadata.rs  query.rs  runtime.rs  table_data.rs  tests.rs  traits.rs
src-tauri/src/db/postgres/: category.rs  connection.rs  mutations.rs  queries.rs  schema.rs  value_search.rs
src-tauri/src/db/redis/: command.rs  command_parser.rs  command_result.rs  helpers.rs  mod.rs  test_support.rs  tests.rs  values.rs
src-tauri/src/db/search/: tests.rs
src-tauri/src/db/sqlite/: batch.rs  batch_tests.rs  connection.rs  connection_tests.rs  queries.rs  queries_tests.rs  sql_text.rs
src-tauri/src/models/: connection.rs  data_source.rs  file_analytics.rs  mod.rs  query.rs  rdbms_data_sources.rs  schema.rs  search.rs
src-tauri/src/models/data_source/: tests.rs
src-tauri/src/models/schema/: core.rs  ddl.rs  postgres.rs  sqlite.rs  tests.rs
src-tauri/src/state/: introspection_pool.rs  mod.rs
src-tauri/src/storage/: corrupt_recovery.rs  crypto.rs  history_audit.rs  history_retention_boot.rs  key_migration.rs  legacy_cleanup.rs  local.rs  local_files.rs  meta.rs  mismatch_metric.rs  mod.rs  reconcile.rs  sql_redact.rs
src-tauri/tests/: backend_adapter_contract_profile.rs  backend_query_result_contract.rs  backend_safety_capability_contract.rs  cancel_error_classes.rs  cancel_mongo.rs  cancel_mysql.rs  cancel_pg.rs  capability_allowlist_workspace_pattern.rs  catalog_explain_contract.rs  clear_mru.rs  connection_status_serde.rs  corrupt_body_recovery.rs  corrupt_recovery.rs  data_source_profile_parity.rs  datagrid_prefs_field_reset.rs  datagrid_prefs_get_default.rs  datagrid_prefs_partial_patch.rs  dual_write_connections.rs  dual_write_reconcile.rs  duckdb_browse_query_adapter.rs  duckdb_file_analytics.rs  emit_state_changed_payload.rs  enterprise_rdbms_declared_only_commands.rs  fixture_harness.rs  fixture_loading.rs  guard_grep.rs  history_add_discriminated_union.rs  history_clear.rs  history_detail.rs  history_executed_at_drift.rs  history_list_filter.rs  history_list_no_sql.rs  history_retention_31d.rs  history_tab_id_null_audit.rs  introspection_pool_isolation.rs  keyring_linux_fallback.rs  keyring_migration.rs  keyring_new_user.rs  launcher_command_guard.rs  legacy_file_cleanup.rs  (+36 more)
src-tauri/tests/common/: mod.rs  query_result_contracts.rs
src-tauri/tests/support/: catalog_explain_contract.rs  testcontainer_lifecycle.rs
(+3451 files in other folders)
