[package]
name = "table-view"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.0"
# 데스크톱 앱 — crates.io 에 publish 되지 않음. 표식이 있어야 cargo deny 가
# `[licenses.private]` 규칙으로 우리 crate 의 license 검사를 건너뛴다.
publish = false

[lib]
name = "table_view_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tauri = { version = "2", features = ["test"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
mongodb = "3"
bson = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
bip39 = { version = "2", default-features = false, features = ["std"] }
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
csv = "1"
