[package]
name = "table-view"
version = "0.3.0"
edition = "2021"
rust-version = "1.91.0"
# 데스크톱 앱 — crates.io 에 publish 되지 않음. 표식이 있어야 cargo deny 가
# `[licenses.private]` 규칙으로 우리 crate 의 license 검사를 건너뛴다.
publish = false

[lib]
name = "table_view_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tauri = { version = "2", features = ["test"] }
# Sprint 237 P5+ (2026-05-08) — DB tier 2 통합 테스트용. cargo test --test
# pg_integration 호출 시 process 안에서 docker container lifecycle 을
# 자체 관리. PG_TEST_URL env 가 셋팅돼 있으면 외부 PG 재사용 (빠른
# iteration). docker daemon 이 없는 환경 (CI sandbox 등) 에서는 즉시
# 실패하므로 pre-push 에는 포함하지 않는다.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "mongo", "mysql", "redis"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "migrate", "json", "uuid", "chrono", "bigdecimal"] }
mongodb = "3"
bson = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
bip39 = { version = "2", default-features = false, features = ["std"] }
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
csv = "1"
# Sprint 371 (Phase 5 F.5) — query_history `sql_redacted` regex masking
# (quoted/numeric literal → `?`). 같은 crate 가 `tracing-subscriber` /
# `globset` / `mongodb` 의 transitive 로 이미 잠겨 있어 build cost 추가 0.
regex = "1"
# Sprint 466 — Redis/Valkey KV adapter. `tokio-rustls-comp` gives async
# command support on the existing Tokio runtime and `rediss://` TLS.
redis = { version = "0.32", features = ["tokio-rustls-comp"] }
# Sprint 356 (2026-05-16) — Q22 keyring file-key migration.
# Cross-platform abstraction lives in `storage::crypto::KeyringBackend`;
# the in-memory backend used by tests means we never link against the
# real OS keyring at test time, keeping the test binary slim. The
# platform-specific feature is gated below so a single-OS build does
# not pull in the other two native backends.
keyring = { version = "3", default-features = false }
tauri-plugin-single-instance = "2"
# Sprint 385 (2026-05-17) — pure-Rust SQL parser. The crate lives under
# `sql-parser-core/` as a path dependency (NOT a Cargo workspace member)
# so `cargo llvm-cov --lib` for `table-view` stays isolated from the new
# crate's coverage profile and so `cargo build --target
# wasm32-unknown-unknown` of the sub-crate doesn't pull in any Tauri
# transitive deps. The same `.rs` sources compile to native (this dep)
# and to WASM (frontend lazy-load via wasm-pack).
sql-parser-core = { path = "sql-parser-core", version = "0.1.0" }
sqlparser = "0.62.0"
duckdb = { version = "1.10503.1", features = ["bundled", "json", "parquet"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
